# esp32-tamagotchi

./: Cargo.toml
.cargo/: config.toml
src/: lib.rs
src/controller/: ble_controller.rs  mod.rs
src/factory/: factory.rs
src/peripherals/: bluetooth.rs  mod.rs  timer.rs
src/service/ble/: advertise_service.rs  battery_service.rs  gatt_service.rs  hid_service.rs  mod.rs  notification_characteristics.rs  notification_helper.rs  notification_service.rs  storage_service.rs
