[package]
edition      = "2024"
name         = "esp32-tamagotchi"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "esp32-tamagotchi"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "~1.0", features = ["esp32", "log-04", "unstable"] }

esp-rtos = { version = "0.2.0", features = [
  "esp-alloc",
  "esp-radio",
  "esp32",
  "log-04",
  "embassy",
] }

esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32", "log-04"] }
log                    = "0.4.27"

critical-section = "1.2.0"
embedded-io = "0.7.1"
esp-alloc = "0.9.0"
esp-println = { version = "0.16.1", features = ["esp32", "log-04"] }
esp-radio = { version = "0.17.0", features = [
  "esp-alloc",
  "esp32",
  "log-04",
  "smoltcp",
  "unstable",
  "wifi",
  "ble",
] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "log",
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
trouble-host = {version = "0.5.1", features = ["peripheral", "scan", "gatt", "security", "central", "derive", "default-packet-pool"]}
embassy-executor = {version = "0.9.1"}
heapless = "0.9.2"
embassy-futures = "0.1.2"
embassy-time = "0.5.0"
static_cell = "2.1.1"
embassy-sync = "0.7.2"
sequential-storage = { version = "7.1.0" }
embedded-storage-async = "0.4.1"
embassy-embedded-hal = "0.5.0"
esp-storage = {version = "0.8.1", features = ["esp32", "esp-hal"] }


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
